# MeshML

./: .gitignore  ARCHITECTURE_GAPS.md  FINAL_STATUS.md  GKE-DEPLOYMENT.md  Makefile  PHASE0_TEST_REPORT.md  PROGRESS.md  README.md  TASKS.md  github-project-board.json  project-structure.md  tech-stack.md
.github/workflows/: ci-cpp.yml  ci-javascript.yml  ci-python.yml  ci.yml  cpp-worker-tests.yml
api/: README.md  openapi.yaml
dashboard/: .env.production  .gitignore  jest.config.js  package.json  tsconfig.json
dashboard/src/: App.tsx
docker/: docker-compose.yml
docker/proxy/: Dockerfile  entrypoint.sh  nginx.conf  nginx.conf.template
docs/: API_GATEWAY_STATUS.md  ARCHITECTURE.md  CONTAINERIZATION_COMPLETE.md  CONTRIBUTING.md  CPP_WORKER_STATUS.md  DEPLOYMENT_ARCHITECTURE.md  DOCKER_TESTING_GUIDE.md  IMPLEMENTATION_STATUS.md  PHASE_11_SUMMARY.md  PHASE_3_COMPLETE.md  PROGRESS.md  QUICKSTART.md  README.md  TASK-3.4-COMPLETE.md  TASK-3.6-COMPLETE.md  TASKS.md  WORKER_REGISTRATION.md  api-groups-reference.md  dataset-format-guide.md  desc.txt  phase2-summary.md  task-3.1-summary.md  task-3.2-files.md  task-3.2-summary.md
docs/architecture/: ARCHITECTURE.md  cloud-deployment-groups.md  cross-platform-design.md  data-flow-diagrams.md
docs/completed/: PHASE-4-COMPLETE-SUMMARY.md  PHASE-5-COMPLETE-SUMMARY.md  PHASE0_VALIDATION_COMPLETE.md  README.md  TASK-3.2-COMPLETE.md  TASK-3.3-COMPLETE.md  TASK-3.5-COMPLETE.md  TASK-4.1-model-upload.md  TASK-4.2-model-validation.md  TASK-4.3-dataset-validation.md  TASK-4.4-VALIDATION-ERROR-REPORTING.md  TASK-5.1-dataset-loading.md  TASK-5.2-sharding-algorithms.md  TASK-5.3-storage-management.md  TASK-5.4-data-distribution.md  TASK-6.1-worker-health-monitoring.md  TASK-6.2-job-queue-management.md  TASK-6.3-worker-discovery-registration.md  TASK-6.4-task-assignment-logic.md  TASK-6.5-fault-tolerance-mechanisms.md  TASK-7.1-model-initialization.md
docs/development/: code-standards.md  local-setup.md
docs/examples/: worker_batch_download.py
docs/postman/: meshml-microservices.postman_collection.json
docs/user-guide/: custom-model-upload.md
examples/: custom_model_template.py
graphql/: README.md  examples.md  schema.graphql
infrastructure/docker/: README.md  docker-compose.yml
k8s/: README.md
k8s/base/: api-gateway.yaml  configmap.yaml  dataset-sharder.yaml  metrics-service.yaml  model-registry.yaml  nginx-ingress.yaml  parameter-server.yaml  postgres.yaml  redis.yaml  task-orchestrator.yaml
monitoring/: prometheus.yml
monitoring/prometheus/: prometheus.yml
proto/: README.md  common.proto  dataset_sharder.proto  metrics.proto  model_registry.proto  parameter_server.proto  task_orchestrator.proto
scripts/: deploy-gke.sh
scripts/dev/: reset_db.sh  start_services.sh  stop_services.sh
scripts/setup/: init_db.sh  install_deps.sh
services/api-gateway/: Dockerfile  README.md  requirements.txt  start.sh
services/api_gateway/: .env.example  CHANGELOG.md  Dockerfile  README.md  pytest.ini  requirements.txt
services/cache/: .env.example  README.md  __init__.py  client.py  config.py  keys.py  requirements.txt  serializers.py  test_connection.py
services/database/: .env.example  README.md  SEEDING.md  alembic.ini  (+6 more)
tests/: e2e_validation.py
workers/cpp-worker/: CMakeLists.txt  README.md  conanfile.txt  config.yaml  run_simple_tests.sh  run_tests.sh
workers/cpp-worker/cmake/: DownloadLibTorch.cmake
workers/cpp-worker/docs/: CONFIG_AND_MODELS.md  CUDA_KERNELS_GUIDE.md  GRPC_EXAMPLES.md  PERFORMANCE_GUIDE.md  TESTING_GUIDE.md  TRAINING_GUIDE.md
workers/cpp-worker/examples/: config_example.cpp  cuda_kernels_example.cpp  model_loader_example.cpp  performance_example.cpp  training_example.cpp
workers/cpp-worker/include/meshml/: config.h
workers/cpp-worker/include/meshml/config/: config_loader.h
workers/cpp-worker/include/meshml/cuda/: cuda_kernels.h
workers/cpp-worker/include/meshml/grpc/: client.h  heartbeat.h  proto_utils.h
workers/cpp-worker/include/meshml/models/: model_loader.h
workers/cpp-worker/include/meshml/training/: checkpoint.h  data_loader.h  trainer.h
workers/cpp-worker/include/meshml/utils/: memory_pool.h  performance.h  simd_ops.h
workers/cpp-worker/proto/: parameter_server.proto
workers/cpp-worker/src/: main.cpp  worker.cpp
workers/cpp-worker/src/config/: config_loader.cpp
workers/cpp-worker/src/cuda/: cuda_kernels.cu
workers/cpp-worker/src/grpc/: client.cpp  heartbeat.cpp
workers/cpp-worker/src/models/: model_loader.cpp
workers/cpp-worker/src/training/: checkpoint.cpp  data_loader.cpp  trainer.cpp
workers/cpp-worker/src/utils/: memory_pool.cpp  performance.cpp  simd_ops.cpp
workers/cpp-worker/tests/: CMakeLists.txt  test_config_loader.cpp  test_cuda_kernels.cpp  test_model_loader.cpp  test_performance.cpp  test_simple.cpp
workers/python-worker/: .gitignore  Dockerfile  PROCEDURE.txt  README.md  build-package.sh  publish.sh  pyproject.toml  quick-build.sh  quick-test.sh  test-auth-flow.sh  test-before-publish.sh  test-install.sh
workers/python-worker/docs/: OPTIMIZATION.md
workers/python-worker/examples/: complete_integration_example.py  example_model.py
workers/python-worker/meshml_worker/: __init__.py  cli.py  config.py  main.py  registration.py  worker.py
workers/python-worker/meshml_worker/communication/: __init__.py  dataset_sharder_client.py  grpc_client.py  heartbeat.py  http_client.py  metrics_client.py  model_registry_client.py  task_orchestrator_client.py
workers/python-worker/meshml_worker/proto/: __init__.py  dataset_sharder_pb2.py  dataset_sharder_pb2_grpc.py  task_orchestrator_pb2.py  task_orchestrator_pb2_grpc.py
workers/python-worker/meshml_worker/training/: dataloader.py  model_loader.py  trainer.py
workers/python-worker/meshml_worker/utils/: checkpoint.py  device.py  logger.py  optimization.py
workers/python-worker/tests/: test_grpc_client.py  test_integration_clients.py  test_model_loader.py  test_optimization.py  test_resource_monitor_and_blob_cache.py  test_trainer.py  test_worker_parameter_server_grpc.py  test_worker_setup.py
(+241 files in other folders)
